# Hydrogen

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
scripts/: build.sh  run.sh
src/: generation.hpp  main.cpp  parser.hpp  tokenization.hpp
